tdf#101313 Copy-paste table from writer to calc

With Merged Cells from Writer to Calc,
Cells Placed in Wrong Position (Wrong cell offsets).

regression from
    commit ed24564ce11683731b820c29d5a46e073ab7a2a7
    Author: Noel Grandin <noel@peralex.com>
    Date:   Thu Jul 19 15:22:31 2012 +0200
    SV_DECL_VARARR_SORT(ScRTFColTwips) o3tl::sorted_vector

Change-Id: I8c90c19f6a27a368fd5807b3eaab84ce820e26e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163518
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>